two-java-applications/kustomize/app01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
        - name: app01
          image: app01:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
#          env:
#            - name: SPRING_PROFILES_ACTIVE
#              value: ""
