two-java-applications/kustomize/app01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: app01
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
