two-java-applications/kustomize/app01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app01
        pathType: Prefix
        backend:
          service:
            name: app01-service
            port:
              number: 80
